src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');

:root {
  --off-white: rgb(221, 221, 221);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}

button {
  cursor: pointer;
}

.text--error {
  margin-top: 4px;
  width: 100%;
  color: red;
  font-size: 14px;
  font-weight: 400;
  text-align: left;
}

/* 

LOGIN AND SIGNUP

*/

.container__login {
  background-color: #202d36;
  min-height: 100vh;
  min-width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form__login--wrapper {
  border-radius: 20px;
  position: absolute;
  background-color: #202d36;
  padding: 40px;
  box-shadow: 23px 23px 46px #151e24, -23px -23px 46px #2b3c48;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  max-width: 400px;
  width: calc(100% - 32px);
}

.form__login {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.login__header {
  color: var(--off-white);
  text-align: center;
  margin: 40px 0;
}

.login__para {
  color: var(--off-white);
  margin-bottom: 12px;
}

.login__input {
  border-radius: 8px;
  background-color: var(--off-white);
  border: 2px solid var(--off-white);
  outline: none;
  padding-left: 8px;
  line-height: 40px;
  margin-top: 20px;
  width: 100%;
}

.login__input:focus {
  border-color: rgb(75, 161, 252);
}

.button {
  color: var(--off-white);
  background-color: #2b3743;
  padding: 8px 16px;
  margin: 10px 0;
  border-radius: 8px;
  border: 0px none transparent;
  outline: none;
  font-size: 1.05rem;
  font-weight: 700;
  transition: 300ms;
}

.button:hover,
.signup__link:hover {
  filter: brightness(1.2);
}

.button:active,
.signup__link:active {
  filter: brightness(1);
}

.button--login {
  margin-top: 20px;
}

.button--google {
  display: flex;
  align-items: center;
  justify-content: center;

  background-color: var(--off-white);
  color: #202d36;
  font-weight: 500;
  letter-spacing: -1px;
}

.google_icon {
  margin-right: 8px;
}

.signup__para {
  margin-top: 60px;
  color: var(--off-white);
}

.signup__link {
  color: var(--off-white);
  text-decoration: underline;
  text-decoration-color: var(--off-white);
}

.loader {
  height: 15px;
  margin-bottom: 16px;
}

/* Loading state */
.chaotic-orbit {
  --uib-size: 15px;
  --uib-speed: 1.5s;
  --uib-color: white;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: var(--uib-size);
  width: var(--uib-size);
  animation: rotate936 calc(var(--uib-speed) * 1.667) infinite linear;
}

.chaotic-orbit::before,
.chaotic-orbit::after {
  content: '';
  position: absolute;
  height: 60%;
  width: 60%;
  border-radius: 50%;
  background-color: var(--uib-color);
  will-change: transform;
  flex-shrink: 0;
}

.chaotic-orbit::before {
  animation: orbit var(--uib-speed) linear infinite;
}

.chaotic-orbit::after {
  animation: orbit var(--uib-speed) linear calc(var(--uib-speed) / -2) infinite;
}

@keyframes rotate936 {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes orbit {
  0% {
    transform: translate(calc(var(--uib-size) * 0.5)) scale(0.73684);
    opacity: 0.65;
  }

  5% {
    transform: translate(calc(var(--uib-size) * 0.4)) scale(0.684208);
    opacity: 0.58;
  }

  10% {
    transform: translate(calc(var(--uib-size) * 0.3)) scale(0.631576);
    opacity: 0.51;
  }

  15% {
    transform: translate(calc(var(--uib-size) * 0.2)) scale(0.578944);
    opacity: 0.44;
  }

  20% {
    transform: translate(calc(var(--uib-size) * 0.1)) scale(0.526312);
    opacity: 0.37;
  }

  25% {
    transform: translate(0%) scale(0.47368);
    opacity: 0.3;
  }

  30% {
    transform: translate(calc(var(--uib-size) * -0.1)) scale(0.526312);
    opacity: 0.37;
  }

  35% {
    transform: translate(calc(var(--uib-size) * -0.2)) scale(0.578944);
    opacity: 0.44;
  }

  40% {
    transform: translate(calc(var(--uib-size) * -0.3)) scale(0.631576);
    opacity: 0.51;
  }

  45% {
    transform: translate(calc(var(--uib-size) * -0.4)) scale(0.684208);
    opacity: 0.58;
  }

  50% {
    transform: translate(calc(var(--uib-size) * -0.5)) scale(0.73684);
    opacity: 0.65;
  }

  55% {
    transform: translate(calc(var(--uib-size) * -0.4)) scale(0.789472);
    opacity: 0.72;
  }

  60% {
    transform: translate(calc(var(--uib-size) * -0.3)) scale(0.842104);
    opacity: 0.79;
  }

  65% {
    transform: translate(calc(var(--uib-size) * -0.2)) scale(0.894736);
    opacity: 0.86;
  }

  70% {
    transform: translate(calc(var(--uib-size) * -0.1)) scale(0.947368);
    opacity: 0.93;
  }

  75% {
    transform: translate(0%) scale(1);
    opacity: 1;
  }

  80% {
    transform: translate(calc(var(--uib-size) * 0.1)) scale(0.947368);
    opacity: 0.93;
  }

  85% {
    transform: translate(calc(var(--uib-size) * 0.2)) scale(0.894736);
    opacity: 0.86;
  }

  90% {
    transform: translate(calc(var(--uib-size) * 0.3)) scale(0.842104);
    opacity: 0.79;
  }

  95% {
    transform: translate(calc(var(--uib-size) * 0.4)) scale(0.789472);
    opacity: 0.72;
  }

  100% {
    transform: translate(calc(var(--uib-size) * 0.5)) scale(0.73684);
    opacity: 0.65;
  }
}

